# fastapi_hw_alimzhan

./: README.md
cars/: README.md  pyproject.toml
cars/app/: cars.py  main.py
users/: README.md  pyproject.toml
users/app/: main.py  users.py
